@@ -6,6 +6,8 @@ build_requires:
   English: 0
   ExtUtils::MakeMaker: 6.36
   File::Object: 0.05
+  Filesys::POSIX: 0
+  Filesys::POSIX::Mem: 0
   Test::More: 0
   Test::NoWarnings: 0
   Test::Pod: 0
