@@ -24,6 +24,8 @@ resources 'homepage' => 'https://github.com/tupinek/Image-Random';
 resources 'repository' => 'git://github.com/tupinek/Image-Random';
 test_requires 'English' => 0;
 test_requires 'File::Object' => 0.05;
+test_requires 'Filesys::POSIX' => 0;
+test_requires 'Filesys::POSIX::Mem' => 0;
 test_requires 'Test::More' => 0;
 test_requires 'Test::NoWarnings' => 0;
 test_requires 'Test::Pod' => 0;
