@@ -1,6 +1,7 @@
 0.07
  - Fix doc.
  - Improve LICENSE AND COPYRIGHT section in doc.
+ - Improve tests for create() method.
  - Update Module::Install to 1.19 version.
  - Update .travis.yml to reality.
 
